# FaFed

./: pyproject.toml  testDist.py  testmp-log.py
Image/: FAFED.py  dist_data.py  main.py  net.py
Image/mnist1/: model.pth
NLP/: FAFED.py  FedAvg.py
code/Image/: FAFED.py  FedAvg.py  main.py
code/NLP/: main.py
