[project]
name = "fafed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi==2023.7.22",
    "charset-normalizer==3.3.1",
    "filelock==3.12.4",
    "fsspec==2023.10.0",
    "idna==3.4",
    "jinja2==3.1.2",
    "markupsafe==2.1.3",
    "mpmath==1.3.0",
    "networkx==3.1",
    "numpy==1.24.4",
    "pillow==10.1.0",
    "requests==2.31.0",
    "setuptools>=75.1.0",
    "sympy==1.12",
    "torch==2.1.0",
    "torchaudio==2.1.0",
    "torchvision==0.16.0",
    "typing-extensions==4.8.0",
    "urllib3==2.0.7",
]
